external-crates/move/crates/move-compiler/tests/move_check/parser/hexstring_newline.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01008]: invalid hex string
  ┌─ tests/move_check/parser/hexstring_newline.move:3:15
  │
3 │     let sig = x"0
  │               ^^^ Missing closing quote (") after hex string

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/hexstring_newline.move:4:2
  │
4 │ 0";
  │  ^ string literals (without a leading 'b' or 'x') are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E03009]: unbound variable
  ┌─ tests/move_check/parser/hexstring_newline.move:5:5
  │
5 │     sig
  │     ^^^ Unbound variable 'sig'
